--- a/things-jaxb-generated/pom.xml
+++ b/things-jaxb-generated/pom.xml
@@ -30,6 +30,39 @@
             <version>2.1</version>
         </dependency>
     </dependencies>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <scm>
+        <developerConnection>scm:git:git@github.com:IvoNet/ThingsAppTools.git</developerConnection>
+        <connection>scm:git:git@github.com:IvoNet/ThingsAppTools.git</connection>
+        <url>https://github.com/IvoNet/ThingsAppTools.git§</url>
+    </scm>
+
+    <!--<distributionManagement>-->
+    <!--<repository>-->
+    <!--<id>releases</id>-->
+    <!--<name>Releases</name>-->
+    <!--<url>http://nexus.ivonet.nl/content/repositories/releases</url>-->
+    <!--</repository>-->
+    <!--<snapshotRepository>-->
+    <!--<id>snapshots</id>-->
+    <!--<name>Snapshots</name>-->
+    <!--<url>http://nexus.ivonet.nl/content/repositories/snapshots</url>-->
+    <!--</snapshotRepository>-->
+    <!--</distributionManagement>-->
+
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>Releases</name>
+            <url>file:///tmp/</url>
+        </repository>
+    </distributionManagement>
+
+
     <build>
         <plugins>
             <plugin>
@@ -44,7 +77,6 @@
                     <schemaIncludes>
                         <include>*.xsd</include>
                     </schemaIncludes>
-                    <npa>true</npa>
                     <removeOldOutput>true</removeOldOutput>
                     <verbose>true</verbose>
                     <extension>true</extension>
