--- a/things-jaxb-generated/pom.xml
+++ b/things-jaxb-generated/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.ivonet</groupId>
     <artifactId>things-jaxb-generated</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <name>IvoNet - Things.app - jaxb-generated</name>
 
     <dependencies>
