--- a/things-jaxb-generated/pom.xml
+++ b/things-jaxb-generated/pom.xml
@@ -15,7 +15,8 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.ivonet</groupId>
     <artifactId>things-jaxb-generated</artifactId>
@@ -37,7 +38,7 @@
     <scm>
         <developerConnection>scm:git:git@github.com:IvoNet/ThingsAppTools.git</developerConnection>
         <connection>scm:git:git@github.com:IvoNet/ThingsAppTools.git</connection>
-        <url>https://github.com/IvoNet/ThingsAppTools.git§</url>
+        <url>https://github.com/IvoNet/ThingsAppTools.git</url>
     </scm>
 
     <!--<distributionManagement>-->
