--- a/things-jaxb-generated/pom.xml
+++ b/things-jaxb-generated/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.ivonet</groupId>
     <artifactId>things-jaxb-generated</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <name>IvoNet - Things.app - jaxb-generated</name>
 
     <dependencies>
@@ -38,7 +38,7 @@
     <scm>
         <developerConnection>scm:git:git@github.com:IvoNet/ThingsAppTools.git</developerConnection>
         <connection>scm:git:git@github.com:IvoNet/ThingsAppTools.git</connection>
-        <url>https://github.com/IvoNet/ThingsAppTools.git</url>
+        <url>https://github.com/IvoNet/ThingsAppTools.git§</url>
     </scm>
 
     <!--<distributionManagement>-->
