--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.ivonet</groupId>
     <artifactId>things-tools</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>IvoNet - Things.app - tools</name>
 
     <dependencies>
