--- a/things-jaxb-generated/pom.xml
+++ b/things-jaxb-generated/pom.xml
@@ -21,6 +21,7 @@
     <groupId>nl.ivonet</groupId>
     <artifactId>things-jaxb-generated</artifactId>
     <version>1.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>IvoNet - Things.app - jaxb-generated</name>
 
     <dependencies>
